# CasinoSpy

./: .gitignore  LICENSE  README.md  chat.html  index.html  overlay.html  package-lock.json  package.json  selector.html  session.html  vite.config.js
scripts/: gen-icon.mjs  publish-release.sh  round-icon.mjs
src/: buddy-setup.js  buddy.js  chat.js  main.js  overlay.js  pixellab.js  scan.js  selector.js  session-overlay.js  session.js  settings.js  slots.js  strategy.js  styles.css  videopoker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  remote.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
