[package]
name = "casinospy"
version = "0.4.0"
description = "Screen-OCR blackjack perfect-strategy overlay"
authors = ["you"]
edition = "2021"

[lib]
name = "casinospy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
xcap = "0.9"
image = "0.25"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
